Squashing more bugs

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .container {
-  width: 60%;
+  width: 50%;
   padding-left: 30px;
   padding-right: 30px;
   margin: 0 auto;
@@ -127,7 +127,7 @@ body {
 
 .header {
   background: #EFEDED;
-  padding: 30px 40px 30px 40px;
+  padding: 30px 40px 30px 50px;
   font-size: 30px;
 }
 
@@ -139,7 +139,7 @@ body {
 
 .footer {
   background: #EFEDED;
-  padding: 10px 40px 10px 40px;
+  padding: 10px 40px 10px 50px;
 }
 
 /*
@@ -197,7 +197,7 @@ button:focus {
   height: 25px;
   width: 25px;
   border: 0;
-  border-radius: 50%;
+  border-radius: 30%;
   cursor: pointer;
 }
 
